--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/isaac_dp3.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/isaac_dp3.yaml
@@ -1,42 +1,81 @@
-# diffusion_policy_3d/config/train_dp3.yaml
-
 defaults:
   - _self_
   - task: my_task
 
+name: train_dp3
+task_name: ${task.name}
+shape_meta: ${task.shape_meta}
+exp_name: "dp3_test"
+
+horizon: 16
+n_obs_steps: 2
+n_action_steps: 8
+n_latency_steps: 0
+dataset_obs_steps: ${n_obs_steps}
+keypoint_visible_rate: 1.0
+obs_as_global_cond: true
+
+policy:
+  _target_: diffusion_policy_3d.policy.dp3.DP3
+  use_point_crop: true
+  condition_type: film
+  use_down_condition: true
+  use_mid_condition: true
+  use_up_condition: true
+
+  diffusion_step_embed_dim: 128
+  down_dims: [512, 1024, 2048]
+  crop_shape: [80, 80]
+  encoder_output_dim: 64
+  horizon: ${horizon}
+  kernel_size: 5
+  n_action_steps: ${n_action_steps}
+  n_groups: 8
+  n_obs_steps: ${n_obs_steps}
+
+  noise_scheduler:
+    _target_: diffusers.schedulers.scheduling_ddim.DDIMScheduler
+    num_train_timesteps: 100
+    beta_start: 0.0001
+    beta_end: 0.02
+    beta_schedule: squaredcos_cap_v2
+    clip_sample: true
+    set_alpha_to_one: true
+    steps_offset: 0
+    prediction_type: sample
+
+  num_inference_steps: 10
+  obs_as_global_cond: true
+  shape_meta: ${shape_meta}
+  use_pc_color: false
+  pointnet_type: "pointnet"
+
+  pointcloud_encoder_cfg:
+    in_channels: 3
+    out_channels: ${policy.encoder_output_dim}
+    use_layernorm: true
+    final_norm: layernorm
+    normal_channel: false
+
+# ----------------------
+# EMA 禁用
+ema:
+  _target_: diffusion_policy_3d.model.diffusion.ema_model.EMAModel
+  update_after_step: 0
+  inv_gamma: 1.0
+  power: 0.75
+  min_value: 0.0
+  max_value: 0.9999
+
+# ----------------------
+# Logging
 logging:
   group: dp3_test_group
   name: dp3_test_run
   project: my_dp3_project
 
-training:
-  seed: 42
-  debug: true
-  num_epochs: 5
-  gradient_accumulate_every: 1
-  max_train_steps: 20
-  max_val_steps: 5
-  val_every: 9999       # ❌ 禁用 validation
-  rollout_every: 9999   # ❌ 禁用 rollout
-  sample_every: 1
-  checkpoint_every: 1
-  use_ema: false
-  resume: false
-  device: cuda
-  tqdm_interval_sec: 0.5
-  lr_scheduler:
-    name: linear
-  lr_warmup_steps: 10
-
-checkpoint:
-  save_ckpt: true
-  save_last_ckpt: true
-  save_last_snapshot: false
-  topk:
-    top_k: 1
-    monitor: train_action_mse_error  # ✅ 改为不依赖 rollout 的指标
-    mode: min
-
+# ----------------------
+# Dataloader
 dataloader:
   batch_size: 1
   shuffle: false
@@ -47,6 +86,54 @@ val_dataloader:
   shuffle: false
   num_workers: 0
 
+# ----------------------
+# Optimizer
 optimizer:
   _target_: torch.optim.Adam
   lr: 3e-4
+
+# ----------------------
+# Training config
+training:
+  seed: 42
+  debug: False
+  num_epochs: 5
+  gradient_accumulate_every: 1
+  max_train_steps: null
+  max_val_steps: null
+  val_every: 9999
+  rollout_every: 9999
+  sample_every: 1
+  checkpoint_every: 1
+  use_ema: false
+  resume: false
+  device: cuda
+  tqdm_interval_sec: 1.0
+  lr_scheduler: cosine
+  lr_warmup_steps: 10
+
+# ----------------------
+# Checkpoint config
+checkpoint:
+  save_ckpt: true
+  save_last_ckpt: true
+  save_last_snapshot: false
+  topk:
+    k: 1
+    monitor_key: train_action_mse_error
+    mode: min
+
+# ----------------------
+# Hydra logging dir
+multi_run:
+  run_dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  wandb_name_base: ${now:%Y.%m.%d-%H.%M.%S}_${name}_${task_name}
+
+hydra:
+  job:
+    override_dirname: ${name}
+  run:
+    dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+  sweep:
+    dir: data/outputs/${now:%Y.%m.%d}/${now:%H.%M.%S}_${name}_${task_name}
+    subdir: ${hydra.job.num}
