--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ trajectory_video.mp4
 isaacgym/
 *.html
 nohup.out
-# data/
+data/
 _C.cpython-38-x86_64-linux-gnu.so
 _C.cpython-39-x86_64-linux-gnu.so
 *_temp.xml
