--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/task/my_task.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/task/my_task.yaml
@@ -5,8 +5,8 @@ name: isaac_grasping
 dataset:
   _target_: diffusion_policy_3d.dataset.my_dataset.IsaacZarrDataset
   zarr_path: data/positive.zarr  # Dataset path
-  n_obs_steps: 3
-  n_action_steps: 6
+  n_obs_steps: ${n_obs_steps}
+  n_action_steps: ${n_action_steps}
   seed: 42
   val_ratio: 0.1
   max_train_episodes: null
