--- a/3D-Diffusion-Policy/diffusion_policy_3d/config/task/my_task.yaml
+++ b/3D-Diffusion-Policy/diffusion_policy_3d/config/task/my_task.yaml
@@ -4,12 +4,14 @@ name: isaac_grasping
 
 dataset:
   _target_: diffusion_policy_3d.dataset.my_dataset.IsaacZarrDataset
-  zarr_path: data/positive_banana.zarr  # Dataset path
+  zarr_path: data/positive_cube.zarr  # Dataset path
   n_obs_steps: ${n_obs_steps}
   n_action_steps: ${n_action_steps}
   seed: 42
   val_ratio: 0.1
   max_train_episodes: null
+  pad_before: ${eval:'${n_obs_steps}-1'}
+  pad_after: ${eval:'${n_action_steps}-1'}
 
 
 env_runner:
